--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.9.2",
+    "@ethersproject/providers": "^5.6.4",
+    "@thirdweb-dev/react": "^2.1.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
