--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@thirdweb-dev/react": "^2.1.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.6.5",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
