--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.5",
-    "next": "12.1.5",
+    "next": "^12.1.7-canary.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
