--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.5",
+    "framer-motion": "^6.3.3",
     "next": "^12.1.7-canary.1",
     "react": "18.0.0",
     "react-dom": "18.0.0"
