--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^6.3.3",
     "next": "^12.1.7-canary.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.31.1"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
