--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^12.1.7-canary.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.31.1"
+    "react-hook-form": "^7.31.1",
+    "react-range": "^1.8.12"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
