--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.31.1",
+    "react-ipfs-uploader": "^1.2.5",
     "react-range": "^1.8.12"
   },
   "devDependencies": {
