--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
+    "ipfs-http-client": "^56.0.3",
     "minimist": "^1.2.6",
     "next": "^12.1.7-canary.1",
     "react": "18.0.0",
