--- a/package.json
+++ b/package.json
@@ -12,24 +12,32 @@
     "@3rdweb/hooks": "^1.9.2",
     "@ethersproject/providers": "^5.6.4",
     "@thirdweb-dev/react": "^2.1.0",
+    "@walletconnect/web3-provider": "^1.7.8",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3auth/web3auth": "^1.0.0-alpha.0",
+    "axios": "^0.27.2",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
     "ipfs-http-client": "^56.0.3",
     "minimist": "^1.2.6",
+    "moralis": "^1.7.0",
     "next": "^12.1.7-canary.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.31.1",
     "react-ipfs-uploader": "^1.2.5",
+    "react-moralis": "^1.3.5",
     "react-range": "^1.8.12",
-    "web3.storage": "^4.2.0"
+    "web3": "^1.7.3",
+    "web3.storage": "^4.2.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/web3": "^1.2.2",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
