--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-ipfs-uploader": "^1.2.5",
     "react-moralis": "^1.3.5",
     "react-range": "^1.8.12",
+    "react-tag-input": "^6.8.0",
     "web3": "^1.7.3",
     "web3.storage": "^4.2.0",
     "web3modal": "^1.9.7"
@@ -37,6 +38,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/react-tag-input": "^6.1.3",
     "@types/web3": "^1.2.2",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
